--- a/Calculator/en.lproj/MainStoryboard.storyboard
+++ b/Calculator/en.lproj/MainStoryboard.storyboard
@@ -6,11 +6,11 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1181"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--GraphicsXY View Controller-->
         <scene sceneID="UsV-jh-IvS">
             <objects>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="KaQ-nI-dcV" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <viewController id="6t6-OC-WEp" sceneMemberID="viewController">
+                <viewController id="6t6-OC-WEp" customClass="GraphicsXYViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="G5b-pE-qZt" customClass="GraphicsXYView">
                         <rect key="frame" x="0.0" y="64" width="320" height="416"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -460,6 +460,9 @@
         </class>
         <class className="GraphicsXYView" superclassName="UIView">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/GraphicsXYView.h"/>
+        </class>
+        <class className="GraphicsXYViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/GraphicsXYViewController.h"/>
         </class>
     </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
