--- a/Calculator/MainStoryboardiPad.storyboard
+++ b/Calculator/MainStoryboardiPad.storyboard
@@ -11,13 +11,29 @@
             <objects>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gX6-cM-xVg" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewController id="Nbl-IY-SXJ" customClass="GraphicsXYViewController" sceneMemberID="viewController">
-                    <view key="view" contentMode="redraw" id="o5e-DT-Fku" customClass="GraphicsXYView">
+                    <view key="view" contentMode="redraw" id="o5e-DT-Fku">
                         <rect key="frame" x="0.0" y="20" width="703" height="748"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="FpK-s6-SDa">
+                                <rect key="frame" x="0.0" y="0.0" width="703" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <items/>
+                            </toolbar>
+                            <view contentMode="redraw" id="wWk-R0-Kz8" customClass="GraphicsXYView">
+                                <rect key="frame" x="0.0" y="44" width="703" height="740"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
                     </view>
                     <toolbarItems/>
+                    <connections>
+                        <outlet property="graphicsView" destination="wWk-R0-Kz8" id="idv-Jf-xu4"/>
+                        <outlet property="toolbar" destination="FpK-s6-SDa" id="Vbf-ub-rSp"/>
+                    </connections>
                 </viewController>
             </objects>
             <point key="canvasLocation" x="-800" y="-63"/>
@@ -450,6 +466,25 @@
             <point key="canvasLocation" x="-774" y="-1006"/>
         </scene>
     </scenes>
+    <classes>
+        <class className="CalculatorViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/CalculatorViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="display" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="history" candidateClass="UILabel"/>
+            </relationships>
+        </class>
+        <class className="GraphicsXYView" superclassName="UIView">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/GraphicsXYView.h"/>
+        </class>
+        <class className="GraphicsXYViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/GraphicsXYViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="graphicsView" candidateClass="GraphicsXYView"/>
+                <relationship kind="outlet" name="toolbar" candidateClass="UIToolbar"/>
+            </relationships>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar" statusBarStyle="blackTranslucent"/>
         <simulatedOrientationMetrics key="orientation"/>
