--- a/Calculator/MainStoryboardiPad.storyboard
+++ b/Calculator/MainStoryboardiPad.storyboard
@@ -18,7 +18,11 @@
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="FpK-s6-SDa">
                                 <rect key="frame" x="0.0" y="0.0" width="703" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                <items/>
+                                <items>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="Tn3-MZ-5WN"/>
+                                    <barButtonItem style="plain" id="BYe-ly-DLz"/>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="MiV-56-MaU"/>
+                                </items>
                             </toolbar>
                             <view contentMode="redraw" id="wWk-R0-Kz8" customClass="GraphicsXYView">
                                 <rect key="frame" x="0.0" y="44" width="703" height="740"/>
@@ -31,6 +35,7 @@
                     </view>
                     <toolbarItems/>
                     <connections>
+                        <outlet property="descriptionBarButtonitem" destination="BYe-ly-DLz" id="vfD-Lm-r2Q"/>
                         <outlet property="graphicsView" destination="wWk-R0-Kz8" id="idv-Jf-xu4"/>
                         <outlet property="toolbar" destination="FpK-s6-SDa" id="Vbf-ub-rSp"/>
                     </connections>
@@ -480,6 +485,7 @@
         <class className="GraphicsXYViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/GraphicsXYViewController.h"/>
             <relationships>
+                <relationship kind="outlet" name="descriptionBarButtonitem" candidateClass="UIBarButtonItem"/>
                 <relationship kind="outlet" name="graphicsView" candidateClass="GraphicsXYView"/>
                 <relationship kind="outlet" name="toolbar" candidateClass="UIToolbar"/>
             </relationships>
