barbuttonitek für die grösse der toolbar

--- a/Calculator/iPad.storyboard
+++ b/Calculator/iPad.storyboard
@@ -70,7 +70,9 @@
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="ciD-FN-fkB">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                <items/>
+                                <items>
+                                    <barButtonItem style="plain" id="ilu-wf-rFD"/>
+                                </items>
                             </toolbar>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="0" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" id="hHq-Ys-1Ie" userLabel="inputLbl">
                                 <rect key="frame" x="20" y="83" width="280" height="26"/>
