--- a/Calculator/en.lproj/iPhone.storyboard
+++ b/Calculator/en.lproj/iPhone.storyboard
@@ -422,6 +422,20 @@
                                     <segue destination="6t6-OC-WEp" kind="push" identifier="graphics" id="4EA-t8-iXq"/>
                                 </connections>
                             </button>
+                            <switch opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" id="C4J-Rk-CzL">
+                                <rect key="frame" x="221" y="365" width="79" height="27"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <action selector="lineModeChanged:" destination="2" eventType="valueChanged" id="QRC-0Q-leR"/>
+                                </connections>
+                            </switch>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Linie:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" id="WG5-PG-JyK">
+                                <rect key="frame" x="164" y="368" width="51" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
@@ -467,7 +481,9 @@
         <class className="GraphicsXYViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/GraphicsXYViewController.h"/>
             <relationships>
+                <relationship kind="outlet" name="descriptionBarButtonitem" candidateClass="UIBarButtonItem"/>
                 <relationship kind="outlet" name="graphicsView" candidateClass="GraphicsXYView"/>
+                <relationship kind="outlet" name="toolbar" candidateClass="UIToolbar"/>
             </relationships>
         </class>
     </classes>
