--- a/Calculator/iPad.storyboard
+++ b/Calculator/iPad.storyboard
@@ -37,7 +37,7 @@
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="9eF-fd-Pws">
                                         <rect key="frame" x="610" y="634" width="75" height="37"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                         <state key="normal" title="Favorit">
                                             <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
@@ -59,6 +59,7 @@
                     </view>
                     <toolbarItems/>
                     <connections>
+                        <outlet property="addFavoriteButton" destination="9eF-fd-Pws" id="MOe-L3-Ij8"/>
                         <outlet property="descriptionBarButtonitem" destination="BYe-ly-DLz" id="vfD-Lm-r2Q"/>
                         <outlet property="graphicsView" destination="wWk-R0-Kz8" id="idv-Jf-xu4"/>
                         <outlet property="toolbar" destination="FpK-s6-SDa" id="Vbf-ub-rSp"/>
@@ -556,6 +557,30 @@
             <point key="canvasLocation" x="-986" y="-1786"/>
         </scene>
     </scenes>
+    <classes>
+        <class className="CalculatorViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/CalculatorViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="display" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="history" candidateClass="UILabel"/>
+            </relationships>
+        </class>
+        <class className="GraphicsFavoritesViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/GraphicsFavoritesViewController.h"/>
+        </class>
+        <class className="GraphicsXYView" superclassName="UIView">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/GraphicsXYView.h"/>
+        </class>
+        <class className="GraphicsXYViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/GraphicsXYViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="addFavoriteButton" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="descriptionBarButtonitem" candidateClass="UIBarButtonItem"/>
+                <relationship kind="outlet" name="graphicsView" candidateClass="GraphicsXYView"/>
+                <relationship kind="outlet" name="toolbar" candidateClass="UIToolbar"/>
+            </relationships>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar" statusBarStyle="blackTranslucent"/>
         <simulatedOrientationMetrics key="orientation"/>
